--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -208,5 +208,6 @@
     <string name="_light">Claro</string>
     <string name="downloaded">Descargado</string>
     <string name="turn_off">Desactivar</string>
-
+    <string name="_default">Default</string>
+    <string name="dynamic">Dynamic</string>
 </resources>
