--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -193,19 +193,21 @@
     <string name="troubleshooting">ПОИСК И УСТРАНЕНИЕ НЕИСПРАВНОСТЕЙ</string>
     <string name="social">СОЦИАЛЬНОЕ</string>
     <string name="english">English</string>
-    <string name="italian">Italian</string>
-    <string name="czech">Czech</string>
-    <string name="german">German</string>
-    <string name="spanish">Spanish</string>
-    <string name="french">French</string>
-    <string name="romanian">Romanian</string>
-    <string name="russian">Russian</string>
-    <string name="turkish">Turkish</string>
-    <string name="polish">Polish</string>
+    <string name="italian">Italian (Italiano)</string>
+    <string name="czech">Czech (Čeština)</string>
+    <string name="german">German (Deutsch)</string>
+    <string name="spanish">Spanish (Español)</string>
+    <string name="french">French (Français)</string>
+    <string name="romanian">Romanian (Română)</string>
+    <string name="russian">Russian (Русский)</string>
+    <string name="turkish">Turkish (Türkçe)</string>
+    <string name="polish">Polish (Polski)</string>
     <string name="dark">Темный</string>
     <string name="system">Система</string>
     <string name="unlimited">Неограниченный</string>
     <string name="_light">Светлый</string>
     <string name="downloaded">Загружено</string>
     <string name="turn_off">Выключить</string>
+    <string name="_default">Default</string>
+    <string name="dynamic">Dynamic</string>
 </resources>
