Updated Polish translation, making more UI elements translatable

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -210,4 +210,7 @@
     <string name="turn_off">Выключить</string>
     <string name="_default">Default</string>
     <string name="dynamic">Dynamic</string>
+    <string name="no">No</string>
+    <string name="stop">Stop</string>
+    <string name="preferences">PREFERENCES</string>
 </resources>
