--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -210,4 +210,7 @@
   <string name="turn_off">Vypnout</string>
   <string name="_default">Výchozí</string>
   <string name="dynamic">Dynamický</string>
+  <string name="no">No</string>
+  <string name="stop">Stop</string>
+  <string name="preferences">PREFERENCES</string>
 </resources>
