Romanian language update
Romanian language update

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -169,7 +169,7 @@
     <string name="medium">Mediu</string>
     <string name="big">Mare</string>
     <string name="none">Nici unul</string>
-    <string name="light">Lumina</string>
+    <string name="light">Leger</string>
     <string name="heavy">Foarte mare</string>
     <string name="effects">Efecte</string>
     <string name="player_rotating_buttons">Butoane rotative</string>
@@ -181,7 +181,7 @@
     <string name="_3_month">3 Luni</string>
     <string name="_6_month">6 Luni</string>
     <string name="_1_year">Un An</string>
-    <string name="all">Complet</string>
+    <string name="all">Total</string>
     <string name="most_played_songs">Melodiile cele mai ascultate</string>
     <string name="most_listened_artists">Most listened artists</string>
     <string name="most_albums_listened">Most albums listened</string>
@@ -192,25 +192,25 @@
     <string name="contributors">CONTRIBUITORI</string>
     <string name="troubleshooting">DEPANARE</string>
     <string name="social">SOCIAL</string>
-    <string name="english">English</string>
-    <string name="italian">Italian (Italiano)</string>
-    <string name="czech">Czech (Čeština)</string>
-    <string name="german">German (Deutsch)</string>
-    <string name="spanish">Spanish (Español)</string>
-    <string name="french">French (Français)</string>
-    <string name="romanian">Romanian (Română)</string>
-    <string name="russian">Russian (Русский)</string>
-    <string name="turkish">Turkish (Türkçe)</string>
-    <string name="polish">Polish (Polski)</string>
-    <string name="dark">Dark</string>
-    <string name="system">System</string>
-    <string name="unlimited">Unlimited</string>
-    <string name="_light">Light</string>
-    <string name="downloaded">Downloaded</string>
-    <string name="turn_off">Turn off</string>
-    <string name="_default">Default</string>
-    <string name="dynamic">Dynamic</string>
-    <string name="no">No</string>
+    <string name="english">Engleză (English)</string>
+    <string name="italian">Italiană (Italiano)</string>
+    <string name="czech">Cehă (Čeština)</string>
+    <string name="german">Germană (Deutsch)</string>
+    <string name="spanish">Spaniolă (Español)</string>
+    <string name="french">Franceză (Français)</string>
+    <string name="romanian">Română (SELECȚIONAT)</string>
+    <string name="russian">Rusă (Русский)</string>
+    <string name="turkish">Turcă (Türkçe)</string>
+    <string name="polish">Poloneză (Polski)</string>
+    <string name="dark">Intuneric</string>
+    <string name="system">Sistem</string>
+    <string name="unlimited">Nelimitat</string>
+    <string name="_light">Lumină</string>
+    <string name="downloaded">Descărcate</string>
+    <string name="turn_off">Opriți</string>
+    <string name="_default">Implicit</string>
+    <string name="dynamic">Dinamic</string>
+    <string name="no">Nu</string>
     <string name="stop">Stop</string>
-    <string name="preferences">PREFERENCES</string>
+    <string name="preferences">PREFERINȚE</string>
 </resources>
