--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -208,7 +208,7 @@
     <string name="_light">Chiaro</string>
     <string name="downloaded">Scaricati</string>
     <string name="turn_off">Disattiva</string>
-    <string name="download">Download</string>
+    <string name="download">Scarica</string>
     <string name="_default">Default</string>
     <string name="dynamic">Dinamico</string>
     <string name="discovery">Scopri</string>
@@ -216,8 +216,14 @@
     <string name="new_albums">Nuovi album</string>
     <string name="moods_and_genres">Moods and generi</string>
     <string name="search_queries">" ricerche"</string>
-    <string name="not_find_battery_optimization_settings">Couldn\'t find battery optimization settings, please whitelist manually</string>
-    <string name="search">Search...</string>
+    <string name="not_find_battery_optimization_settings">Impossibile trovare le impostazioni di ottimizzazione della batteria, si prega di farlo manualmente</string>
+    <string name="search">Cerca...</string>
+    <string name="it_seems_that_youtube_music_is_not_installed">Sembra che Youtube Music non sia installato</string>
+    <string name="listen_on_youtube">Ascolta su YouTube</string>
+    <string name="listen_on_youtube_music">Ascolta su YouTube Music</string>
+    <string name="on_device">Sul dispositivo</string>
+    <string name="open_settings">Apri impostazioni</string>
+    <string name="permission_declined_please_grant_media_permissions_in_the_settings_of_your_device">Permission declined, please grant media permissions in the settings of your device.</string>
     <string name="no">No</string>
     <string name="stop">Stop</string>
     <string name="preferences">PREFERENCES</string>
