--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,6 +208,7 @@
     <string name="_light">Light</string>
     <string name="downloaded">Downloaded</string>
     <string name="turn_off">Turn off</string>
+    <string name="download">Download</string>
     <string name="_default">Default</string>
     <string name="dynamic">Dynamic</string>
     <string name="discovery">Discovery</string>
@@ -220,4 +221,10 @@
     <string name="no" >No</string>
     <string name="stop" >Stop</string>
     <string name="preferences" >PREFERENCES</string>
+    <string name="it_seems_that_youtube_music_is_not_installed">It seems that YouTube Music is not installed!</string>
+    <string name="listen_on_youtube">Listen on YouTube</string>
+    <string name="listen_on_youtube_music">Listen on YouTube Music</string>
+    <string name="on_device">On device</string>
+    <string name="open_settings">Open settings</string>
+    <string name="permission_declined_please_grant_media_permissions_in_the_settings_of_your_device">Permission declined, please grant media permissions in the settings of your device.</string>
 </resources>
