Update Spanish translation

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -192,25 +192,25 @@
     <string name="contributors">COLABORADORES</string>
     <string name="troubleshooting">RESOLUCIÓN DE PROBLEMAS</string>
     <string name="social">SOCIAL</string>
-    <string name="english">Inglés</string>
+    <string name="english">Inglés (English)</string>
     <string name="italian">Italiano</string>
-    <string name="czech">Checo</string>
-    <string name="german">Alemán</string>
+    <string name="czech">Checo (Čeština)</string>
+    <string name="german">Alemán (Deutsch)</string>
     <string name="spanish">Español</string>
-    <string name="french">Francés</string>
-    <string name="romanian">Rumano</string>
-    <string name="russian">Ruso</string>
-    <string name="turkish">Turco</string>
-    <string name="polish">Polish</string>
+    <string name="french">Francés (Français)</string>
+    <string name="romanian">Rumano (Română)</string>
+    <string name="russian">Ruso (Русский)</string>
+    <string name="turkish">Turco (Türkçe)</string>
+    <string name="polish">Polish (Polski)</string>
     <string name="dark">Oscuro</string>
     <string name="system">Sistema</string>
     <string name="unlimited">Ilimitado</string>
     <string name="_light">Claro</string>
     <string name="downloaded">Descargado</string>
     <string name="turn_off">Desactivar</string>
-    <string name="_default">Default</string>
-    <string name="dynamic">Dynamic</string>
+    <string name="_default">Por defecto</string>
+    <string name="dynamic">Dinámico</string>
     <string name="no">No</string>
-    <string name="stop">Stop</string>
-    <string name="preferences">PREFERENCES</string>
+    <string name="stop">Detener</string>
+    <string name="preferences">PREFERENCIAS</string>
 </resources>
