--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -155,7 +155,7 @@
     <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Cette chanson ne peut pas être lue en raison de restrictions du serveur</string>
     <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">L\'identifiant vidéo retourné ne correspond pas à celui demandé</string>
     <string name="error_an_unknown_playback_error_has_occurred">Une erreur de lecture inconnue s\'est produite, si le problème persiste signalé le problème</string>
-    <string name="tips">Recommandations</string>
+    <string name="tips">✨ Recommandations</string>
     <string name="next_playing">Prochaine en lecture...</string>
     <string name="quick_pics_and_tips">Sélection rapide et recommandations</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">C\'est la durée d\'écoute minimale pour inclure la chanson comme une suggestion possible pour la sélection rapide et les recommandations</string>
@@ -211,20 +211,20 @@
     <string name="download">Download</string>
     <string name="_default">Par défaut</string>
     <string name="dynamic">Dynamique</string>
-    <string name="no">No</string>
+    <string name="no">NoN</string>
     <string name="stop">Stop</string>
     <string name="preferences">PREFERENCES</string>
-    <string name="discovery">Discovery</string>
-    <string name="mood">Mood</string>
-    <string name="new_albums">New albums</string>
-    <string name="moods_and_genres">Moods and genres</string>
-    <string name="search_queries">" search queries"</string>
-    <string name="not_find_battery_optimization_settings">Couldn\'t find battery optimization settings, please whitelist manually</string>
-    <string name="search">Search...</string>
-    <string name="it_seems_that_youtube_music_is_not_installed">It seems that YouTube Music is not installed!</string>
-    <string name="listen_on_youtube">Listen on YouTube</string>
-    <string name="listen_on_youtube_music">Listen on YouTube Music</string>
-    <string name="on_device">On device</string>
-    <string name="open_settings">Open settings</string>
-    <string name="permission_declined_please_grant_media_permissions_in_the_settings_of_your_device">Permission declined, please grant media permissions in the settings of your device.</string>
+    <string name="discovery">Découvrir</string>
+    <string name="mood">Humeur</string>
+    <string name="new_albums">Nouveaux albums</string>
+    <string name="moods_and_genres">Humeurs et genres</string>
+    <string name="search_queries">" requêtes de recherche"</string>
+    <string name="not_find_battery_optimization_settings">Impossible de trouver les paramètres d\'optimisation de la batterie, veuillez les ajouter manuellement à la liste blanche</string>
+    <string name="search">Recherche...</string>
+    <string name="it_seems_that_youtube_music_is_not_installed">Il semblerait que YouTube Music ne soit pas installé !</string>
+    <string name="listen_on_youtube">Écouter sur YouTube</string>
+    <string name="listen_on_youtube_music">Écouter sur YouTube Music</string>
+    <string name="on_device">Sur l\'appareil</string>
+    <string name="open_settings">Ouvrir les paramètres</string>
+    <string name="permission_declined_please_grant_media_permissions_in_the_settings_of_your_device">Autorisation refusée, veuillez accorder les autorisations multimédias dans les paramètres de votre appareil</string>
 </resources>
