More emojies and removed delete / unuse translation
More emojies and removed delete / unuse translation

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -21,7 +21,7 @@
     <string name="albums">Albums</string>
     <string name="artists">Artistes</string>
     <string name="enter_the_playlist_name">Entrez le nom de la playlist</string>
-    <string name="playlists">Playlists</string>
+    <string name="playlists">🔀 Playlists</string>
     <string name="favorites">❤ Favoris</string>
     <string name="offline">✈ Hors ligne</string>
     <string name="quick_picks">Sélections rapides</string>
@@ -127,7 +127,6 @@
     <string name="sleep_timer">Minuterie d\'arrêt</string>
     <string name="left">%1$s restantes</string>
     <string name="set">Définir</string>
-    <string name="play_next">Lecture suivante</string>
     <string name="confirm">Confirmer</string>
     <string name="show">Afficher</string>
     <string name="unsynchronized_lyrics">les paroles non synchronisées</string>
@@ -156,21 +155,20 @@
     <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">L\'identifiant vidéo retourné ne correspond pas à celui demandé</string>
     <string name="error_an_unknown_playback_error_has_occurred">Une erreur de lecture inconnue s\'est produite, si le problème persiste signalé le problème</string>
     <string name="tips">✨ Recommandations</string>
-    <string name="next_playing">Prochaine en lecture...</string>
-    <string name="quick_pics_and_tips">Sélection rapide et recommandations</string>
+    <string name="quick_pics_and_tips">✨ Sélection rapide et recommandations</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">C\'est la durée d\'écoute minimale pour inclure la chanson comme une suggestion possible pour la sélection rapide et les recommandations</string>
     <string name="min_listening_time">Durée d\'écoute minimale</string>
     <string name="player_thumbnail_size">Taille de la pochette d\'album</string>
     <string name="restarting_rimusic_is_required">Un redémarrage est requis pour pouvoir l\'appliquer !</string>
     <string name="size_name">Taille</string>
     <string name="current_size_name">"Taille de la pochette d\'album actuelle"</string>
-    <string name="current_shape_name">Arrondissement des coins actuel</string>
-    <string name="small">Petit</string>
-    <string name="medium">Moyen</string>
-    <string name="big">Grand</string>
-    <string name="none">Aucun</string>
-    <string name="light">Légé</string>
-    <string name="heavy">Énorme</string>
+    <string name="current_shape_name">⚫ Arrondissement des coins actuel</string>
+    <string name="small">◾ Petit</string>
+    <string name="medium">◼ Moyen</string>
+    <string name="big">⬛ Grand</string>
+    <string name="none">🙅‍♂️ Aucun</string>
+    <string name="light">◼ Légé</string>
+    <string name="heavy">⬛ Énorme</string>
     <string name="effects">🌟EFFETS</string>
     <string name="player_rotating_buttons">Boutons rotatifs</string>
     <string name="player_enable_rotation_buttons">Autorise la rotation des boutons lorsqu\'ils sont cliqués</string>
@@ -182,10 +180,10 @@
     <string name="_6_month">6 Mois</string>
     <string name="_1_year">1 an</string>
     <string name="all">Tout</string>
-    <string name="most_played_songs">Chansons les plus écoutées</string>
-    <string name="most_listened_artists">Artistes les plus écoutés</string>
-    <string name="most_albums_listened">Albums les plus écoutés</string>
-    <string name="most_played_playlists">Playlists les plus écoutées</string>
+    <string name="most_played_songs">🎶 Chansons les plus écoutées</string>
+    <string name="most_listened_artists">👤 Artistes les plus écoutés</string>
+    <string name="most_albums_listened">💿 Albums les plus écoutés</string>
+    <string name="most_played_playlists">🔀 Playlists les plus écoutées</string>
     <string name="languages">🏳 Langues</string>
     <string name="app_language">Langues de l\'application</string>
     <string name="in_alphabetical_order">Dans l\'ordre alphabétique :</string>
@@ -206,7 +204,7 @@
     <string name="system">⚙ Système</string>
     <string name="unlimited">Illimité</string>
     <string name="_light">⚪ Clair</string>
-    <string name="downloaded">⬇'Téléchargé</string>
+    <string name="downloaded">⬇ Téléchargé</string>
     <string name="turn_off">Desactivé</string>
     <string name="download">Télécharger</string>
     <string name="_default">⚙ Par défaut</string>
@@ -216,11 +214,11 @@
     <string name="preferences">👁 PREFERENCES</string>
     <string name="discovery">Découvrir</string>
     <string name="mood">Humeur</string>
-    <string name="new_albums">Nouveaux albums</string>
-    <string name="moods_and_genres">Humeurs et genres</string>
+    <string name="new_albums">🆕 Nouveaux albums</string>
+    <string name="moods_and_genres">😀 Humeurs et genres</string>
     <string name="search_queries">" requêtes de recherche"</string>
     <string name="not_find_battery_optimization_settings">Impossible de trouver les paramètres d\'optimisation de la batterie, veuillez les ajouter manuellement à la liste blanche</string>
-    <string name="search">Recherche...</string>
+    <string name="search">🔎 Rechercher</string>
     <string name="it_seems_that_youtube_music_is_not_installed">Il semblerait que YouTube Music ne soit pas installé !</string>
     <string name="listen_on_youtube">Écouter sur YouTube</string>
     <string name="listen_on_youtube_music">Écouter sur YouTube Music</string>
