More emojies and removed delete / unuse translation
More emojies and removed delete / unuse translation

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -46,17 +46,17 @@
     <string name="search_lyrics_online">Rechercher les paroles en ligne</string>
     <string name="fetch_lyrics_again">Récupérer les paroles</string>
     <string name="queue_loop">"Lecture continue"</string>
-    <string name="id">Id</string>
-    <string name="itag">Itag</string>
-    <string name="bitrate">Débit</string>
-    <string name="size">Taille</string>
-    <string name="cached">En cache</string>
-    <string name="loudness">Volume</string>
+    <string name="id">📡 Id</string>
+    <string name="itag">🔗 Itag</string>
+    <string name="bitrate">🔢'Débit</string>
+    <string name="size">🗃 Taille</string>
+    <string name="cached">📂 En cache</string>
+    <string name="loudness">🔊 Volume</string>
     <string name="clear">Effacer</string>
-    <string name="error">Une erreur est survenue</string>
-    <string name="enter_a_name">Rechercher</string>
-    <string name="online">En ligne</string>
-    <string name="no_results_found">Aucun résultat trouvé.\nVeuillez essayer une autre recherche ou une autre catégorie</string>
+    <string name="error">❌ Une erreur est survenue</string>
+    <string name="enter_a_name">🔎 Rechercher</string>
+    <string name="online">🌐 En ligne</string>
+    <string name="no_results_found">❌ Aucun résultat trouvé.\nVeuillez essayer une autre recherche ou une autre catégorie</string>
     <string name="videos">Vidéos</string>
     <string name="featured">En vedette</string>
     <string name="view_the_source_code">👀 Afficher le code source</string>
@@ -142,18 +142,17 @@
     <string name="custom_cache_from_android_10_may_not_be_available">À partir d\'Android 10, cette fonctionnalité peut ne plus être disponible</string>
     <string name="reset_cache_location_folder">↩ RÉINITIALISER LE CACHE</string>
     <string name="used">"utilisé"</string>
-    <string name="now_playing">Entrain de lire...</string>
     <string name="close_background_player">Effacer le lecteur en arrière plan</string>
     <string name="when_app_swipe_out_from_task_manager">Lorsque vous faites glisser en dehors du gestionnaire des applications récentes</string>
     <string name="opening_url">est entrain de charger...</string>
-    <string name="an_error_has_occurred_while_fetching_the_lyrics">Une erreur est apparue lors de la récupération des paroles</string>
+    <string name="an_error_has_occurred_while_fetching_the_lyrics">❌ Une erreur est apparue lors de la récupération des paroles</string>
     <string name="are_not_available_for_this_song">n\'est pas disponibles pour cette chanson</string>
-    <string name="error_a_network_error_has_occurred">Une erreur réseau est apparue</string>
+    <string name="error_a_network_error_has_occurred">❌ Une erreur réseau est apparue</string>
     <string name="error_couldn_t_find_a_playable_audio_format">Ne peut pas trouver un format audio jouable</string>
     <string name="error_the_original_video_source_of_this_song_has_been_deleted">La source vidéo originale de cette chanson a été supprimée</string>
     <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Cette chanson ne peut pas être lue en raison de restrictions du serveur</string>
     <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">L\'identifiant vidéo retourné ne correspond pas à celui demandé</string>
-    <string name="error_an_unknown_playback_error_has_occurred">Une erreur de lecture inconnue s\'est produite, si le problème persiste signalé le problème</string>
+    <string name="error_an_unknown_playback_error_has_occurred">❌ Une erreur de lecture inconnue s\'est produite, si le problème persiste signalé le problème</string>
     <string name="tips">✨ Recommandations</string>
     <string name="quick_pics_and_tips">✨ Sélection rapide et recommandations</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">C\'est la durée d\'écoute minimale pour inclure la chanson comme une suggestion possible pour la sélection rapide et les recommandations</string>
