--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -209,6 +209,8 @@
     <string name="downloaded">Descargado</string>
     <string name="turn_off">Desactivar</string>
     <string name="download">Download</string>
+    <string name="_default">Por defecto</string>
+    <string name="dynamic">Dinámico</string>
     <string name="discovery">Discovery</string>
     <string name="mood">Mood</string>
     <string name="new_albums">New albums</string>
@@ -216,15 +218,14 @@
     <string name="search_queries">" search queries"</string>
     <string name="not_find_battery_optimization_settings">Couldn\'t find battery optimization settings, please whitelist manually</string>
     <string name="search">Search...</string>
+    <string name="no">No</string>
+    <string name="stop">Detener</string>
+    <string name="preferences">PREFERENCIAS</string>
     <string name="it_seems_that_youtube_music_is_not_installed">It seems that YouTube Music is not installed!</string>
     <string name="listen_on_youtube">Listen on YouTube</string>
     <string name="listen_on_youtube_music">Listen on YouTube Music</string>
     <string name="on_device">On device</string>
     <string name="open_settings">Open settings</string>
-    <string name="permission_declined_please_grant_media_permissions_in_the_settings_of_your_device">Permission declined, please grant media permissions in the settings of your device.</string>
-    <string name="_default">Por defecto</string>
-    <string name="dynamic">Dinámico</string>
-    <string name="no">No</string>
-    <string name="stop">Detener</string>
-    <string name="preferences">PREFERENCIAS</string>
+    <string name="permission_declined_grant_media_permissions">Permission declined, please grant media permissions in the settings of your device.</string>
+    <string name="enable_wavy_timeline">Enable the wavy timeline</string>
 </resources>
