--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -226,5 +226,6 @@
     <string name="listen_on_youtube_music">Écouter sur YouTube Music</string>
     <string name="on_device">Sur l\'appareil</string>
     <string name="open_settings">Ouvrir les paramètres</string>
-    <string name="permission_declined_please_grant_media_permissions_in_the_settings_of_your_device">Autorisation refusée, veuillez accorder les autorisations multimédias dans les paramètres de votre appareil</string>
+    <string name="permission_declined_grant_media_permissions">Autorisation refusée, veuillez accorder les autorisations multimédias dans les paramètres de votre appareil</string>
+    <string name="enable_wavy_timeline">Enable the wavy timeline</string>
 </resources>
