Addition of translations and correction of errors

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -214,7 +214,7 @@
     <string name="discovery">Discovery</string>
   <string name="mood">Mood</string>
     <string name="new_albums">New albums</string>
-  <string name="moods_and_genres">Moods and genres</string>
+    <string name="moods_and_genres">Moods and genres</string>
     <string name="search_queries">" search queries"</string>
     <string name="not_find_battery_optimization_settings">Couldn\'t find battery optimization settings, please whitelist manually</string>
     <string name="search">Search...</string>
@@ -227,5 +227,6 @@
     <string name="on_device">On device</string>
     <string name="open_settings">Open settings</string>
     <string name="permission_declined_grant_media_permissions">Permission declined, please grant media permissions in the settings of your device.</string>
+    <string name="wavy_timeline">Wavy timeline</string>  
     <string name="enable_wavy_timeline">Enable the wavy timeline</string>
 </resources>
