--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -227,5 +227,6 @@
     <string name="on_device">On device</string>
     <string name="open_settings">Open settings</string>
     <string name="permission_declined_grant_media_permissions">Permission declined, please grant media permissions in the settings of your device.</string>
+    <string name="wavy_timeline">Wavy timeline</string>
     <string name="enable_wavy_timeline">Enable the wavy timeline</string>
 </resources>
