--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -211,7 +211,7 @@
     <string name="download">Download</string>
     <string name="_default">Default</string>
     <string name="dynamic">Dynamic</string>
-    <string name="discovery">Entdechen</string>
+    <string name="discovery">Entdecken</string>
     <string name="mood">Stimmung</string>
     <string name="new_albums">Neue Alben</string>
     <string name="moods_and_genres">Stimmungen und Genres</string>
