--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -77,7 +77,7 @@
         <string name="lockscreen">Sperbildschirm</string>
         <string name="show_song_cover">Songcover anzeigen</string>
         <string name="use_song_cover_on_lockscreen">Songcover auf dem Sperrbildschirm verwenden</string>
-        <string name="cache">Offline-Songs</string>
+        <string name="cache">Zwischenspeicher</string>
         <string name="cache_cleared">Wenn der Zwischenspeicher keinen Speicherplatz mehr hat, werden die Ressourcen, auf die am längsten nicht zugegriffen wurde, gelöscht</string>
         <string name="image_cache">Bild Zwischenspeicher</string>
         <string name="max_size">Max. Größe</string>
@@ -206,7 +206,7 @@
     <string name="system">System</string>
     <string name="unlimited">Unbegrenzt</string>
     <string name="_light">Light</string>
-    <string name="downloaded">Zwischenspeicher</string>
+    <string name="downloaded">Offline-Songs</string>
     <string name="turn_off">Ausschalten</string>
     <string name="download">Download</string>
     <string name="_default">Default</string>
