--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -225,4 +225,5 @@
     <string name="permission_declined_grant_media_permissions">Permission declined, please grant media permissions in the settings of your device.</string>
     <string name="wavy_timeline">Wavy timeline</string>    
     <string name="enable_wavy_timeline">Enable the wavy timeline</string>
+    <string name="play_next">Play next</string>
 </resources>
