--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -225,5 +225,5 @@
     <string name="permission_declined_grant_media_permissions">Autorisation refusée, veuillez accorder les autorisations multimédias dans les paramètres de votre appareil</string>
     <string name="wavy_timeline">Barre de navigation ondulée</string>    
     <string name="enable_wavy_timeline">Active la barre de navigation ondulée</string>
-    <string name="play_next">Play next</string>
+    <string name="play_next">Musique suivante</string>
 </resources>
