--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -204,26 +204,26 @@
     <string name="_light">Lumină</string>
     <string name="downloaded">Descărcate</string>
     <string name="turn_off">Opriți</string>
-    <string name="download">Download</string>
+    <string name="download">Descarcă</string>
     <string name="_default">Implicit</string>
     <string name="dynamic">Dinamic</string>
-    <string name="discovery">Discovery</string>
-    <string name="mood">Mood</string>
-    <string name="new_albums">New albums</string>
-    <string name="moods_and_genres">Moods and genres</string>
-    <string name="search_queries">" search queries"</string>
-    <string name="not_find_battery_optimization_settings">Couldn\'t find battery optimization settings, please whitelist manually</string>
-    <string name="search">Search...</string>
+    <string name="discovery">Descoperiri</string>
+    <string name="mood">Stare</string>
+    <string name="new_albums">Albumuri noi</string>
+    <string name="moods_and_genres">Stări și Genuri</string>
+    <string name="search_queries">" căutare"</string>
+    <string name="not_find_battery_optimization_settings">Nu s-au putut găsi setările de optimizare al bateriei, vă rugăm să adăugați manual în lista albă</string>
+    <string name="search">Caută...</string>
     <string name="no">Nu</string>
     <string name="stop">Stop</string>
     <string name="preferences">PREFERINȚE</string>
-    <string name="it_seems_that_youtube_music_is_not_installed">It seems that YouTube Music is not installed!</string>
-    <string name="listen_on_youtube">Listen on YouTube</string>
-    <string name="listen_on_youtube_music">Listen on YouTube Music</string>
-    <string name="on_device">On device</string>
-    <string name="open_settings">Open settings</string>
-    <string name="permission_declined_grant_media_permissions">Permission declined, please grant media permissions in the settings of your device.</string>
-    <string name="wavy_timeline">Wavy timeline</string>    
-    <string name="enable_wavy_timeline">Enable the wavy timeline</string>
-    <string name="play_next">Play next</string>
+    <string name="it_seems_that_youtube_music_is_not_installed">YouTube Music nu este instalat!</string>
+    <string name="listen_on_youtube">Ascultă pe YouTube</string>
+    <string name="listen_on_youtube_music">Ascultă pe YouTube Music</string>
+    <string name="on_device">În dispozitiv</string>
+    <string name="open_settings">Deschide setările</string>
+    <string name="permission_declined_grant_media_permissions">Permisiune refuzată, vă rugăm să acordați permisiunile media în setările dispozitivului dvs.</string>
+    <string name="wavy_timeline">Bară de progres ondulată</string>
+    <string name="enable_wavy_timeline">Utilizează bară de progres ondulată</string>
+    <string name="play_next">Joacă după</string>
 </resources>
