Restored the ability to toggle lyrics by tapping on a thumbnail

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -226,4 +226,6 @@
         <string name="wavy_timeline">Gewellte Zeitachse</string>
         <string name="enable_wavy_timeline">Aktivieren Sie die gewellte Zeitleiste</string>
     <string name="play_next">Play next</string>
+        <string name="toggle_lyrics">Toggle lyrics</string>
+        <string name="by_tapping_on_the_thumbnail">By tapping on the thumbnail</string>
 </resources>
