--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -226,4 +226,6 @@
     <string name="wavy_timeline">Wavy timeline</string>    
     <string name="enable_wavy_timeline">Enable the wavy timeline</string>
     <string name="play_next">Play next</string>
+    <string name="toggle_lyrics">Toggle lyrics</string>
+    <string name="by_tapping_on_the_thumbnail">By tapping on the thumbnail</string>
 </resources>
