--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -228,4 +228,5 @@
     <string name="play_next">Play next</string>
     <string name="toggle_lyrics">Toggle lyrics</string>
     <string name="by_tapping_on_the_thumbnail">By tapping on the thumbnail</string>
+    <string name="require_mic_permission">Visualizer effect require mic permission, grant please.</string>
 </resources>
